Remove unused assets and update form layout with new banner image

--- a/src/index.html
+++ b/src/index.html
@@ -130,8 +130,12 @@
                         </div>
                     </div>
 
-                    <div class="flex justify-center w-full lg:w-1/3">
+                    <div class=" hidden lg:flex justify-center w-full lg:w-1/3">
                         <img src="../assets/bg-about-web.jpg" alt="Person Image"
+                            class="w-full max-w-xs md:max-w-sm lg:max-w-md">
+                    </div>
+                    <div class=" lg:hidden flex justify-center w-full lg:w-1/3">
+                        <img src="../assets/bg-about-mobile.jpg" alt="Person Image"
                             class="w-full max-w-xs md:max-w-sm lg:max-w-md">
                     </div>
                 </div>
@@ -327,31 +331,15 @@
         <!-- form  -->
         <section class="bg-white lg:px-20  font-[Montserrat] relative ">
             <div class="container mx-auto px-6">
-                <div class="flex flex-col lg:flex-row items-center justify-center gap-8 lg:justify-between">
+                <div class="flex flex-col lg:flex-row items-center justify-center gap-8 lg:justify-between bg-amber-700">
                     <!-- Image Section -->
                     <div
-                        class="w-full lg:w-1/2 flex justify-center flex-col lg:justify-center transform mb-8 lg:mb-0 bg-amber-600 p-8 rounded-lg px-8 relative">
-                        <!-- <div class="absolute  right-0 w-24 bg-orange-500 ">
-                            <img src="../assets/Arrow 07.png" alt="" class="w-full h-full">
-                        </div> -->
-                        <div class="text-center lg:text-left w-full mt-12 md:mt-2 px-16 py-8">
+                        class="w-full lg:w-1/2 flex justify-center flex-col lg:justify-center transform mb-8 lg:mb-0 bg-amber-600 p-8 rounded-lg px-8 relative ">
 
-                            <h2 class="text-white md:text-5xl text-2xl  font-bold ml-2  ">
-                                Register yourself now
-                            </h2>
-                            <p class="text-gray-100 text-2xl font-bold mt-4 ml-2">
-                                and get
-                                <span class="bg-white px-4 py-0 md:px-3  rounded-xl text-black font-semibold">
-                                    flat 3000
-                                </span>
-                                discount on all our courses
-                                before 30th March
-                            </p>
-                        </div>
 
-                        <div class="h-1/2 w-full flex justify-center relative">
-                            <img src="../assets/bg-form.png" alt="Register Image"
-                                class="h-48 w-96 lg:scale-130 max-w-md lg:max-w-sm mt-4 object-cover object-bottom  ">
+                        <div class="h-1/2 w-full  justify-center   relative p-8">
+                            <img src="../assets/form-side-banner.jpg" alt="Register Image"
+                                class=" max-w-md lg:max-w-xs  object-cover object-center rounded-4xl   ">
 
                         </div>
                     </div>
