--- a/src/index.html
+++ b/src/index.html
@@ -132,11 +132,11 @@
 
                     <div class=" hidden lg:flex justify-center w-full lg:w-1/3">
                         <img src="../assets/bg-about-web.jpg" alt="Person Image"
-                            class="w-full max-w-xs md:max-w-sm lg:max-w-md">
+                            class="w-full max-w-xs md:max-w-sm lg:max-w-md rounded-xl">
                     </div>
                     <div class=" lg:hidden flex justify-center w-full lg:w-1/3">
                         <img src="../assets/bg-about-mobile.jpg" alt="Person Image"
-                            class="w-full max-w-xs md:max-w-sm lg:max-w-md">
+                            class="w-full max-w-xs md:max-w-sm lg:max-w-md rounded-xl">
                     </div>
                 </div>
             </div>
